// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getVersion run correctly: run correctly 1`] = `

import { getVersion } from '../../macro.js';
      const version = getVersion();
      const versionAlt = getVersion(false);
      const versionObject = getVersion(true);

      ↓ ↓ ↓ ↓ ↓ ↓

const version = ['11.14.2-rc.123+a.2.56'][0];
const versionAlt = ['11.14.2-rc.123+a.2.56'][0];
const versionObject = [
  {
    build: ['a', '2', '56'],
    loose: false,
    major: 11,
    minor: 14,
    patch: 2,
    prerelease: ['rc', 123],
    raw: '11.14.2-rc.123+a.2.56',
    version: '11.14.2-rc.123',
  },
][0];


`;

exports[`loadJson load path from json file: load path from json file 1`] = `

import { loadJson } from '../macro.js';
        const loadedFile = loadJson('./__fixtures__/three.other.json', 'deeply.nested.0.file.for');
        const otherFile = loadJson('./__fixtures__/three.other.json', 'deeply.nested[0].file.for');
        const noValue = loadJson('./__fixtures__/three.other.json', 'i.dont.exist');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = ['you'][0];
const otherFile = ['you'][0];
const noValue = [undefined][0];


`;

exports[`loadJson pseudo-dynamic values: pseudo-dynamic values 1`] = `

import { loadJson } from '../macro.js';
      const fileName = './__fixtures__/one.test' + '.json';
      const loadedFile = loadJson(fileName);

      ↓ ↓ ↓ ↓ ↓ ↓

const fileName = './__fixtures__/one.test' + '.json';
const loadedFile = [
  {
    simple: 'json',
  },
][0];


`;

exports[`loadJson run correctly: run correctly 1`] = `

import { loadJson } from '../macro.js';

      const loadedFile = loadJson('./__fixtures__/one.test.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = [
  {
    simple: 'json',
  },
][0];


`;

exports[`loadJson use property: use property 1`] = `

import { loadJson } from '../macro.js';

      const loadedFile = loadJson('./__fixtures__/one.test.json').simple;

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFile = [
  {
    simple: 'json',
  },
][0].simple;


`;

exports[`loadJsonFiles run correctly: run correctly 1`] = `

import { loadJsonFiles } from '../macro.js';
      const loadedFiles = loadJsonFiles('__fixtures__/*.test.json', '**/four.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const loadedFiles = [
  [
    {
      simple: 'json',
    },
    {
      hello: 'friend',
    },
    ['an', 'array', 'of', 'strings', 5, 'nope'],
  ],
][0];


`;

exports[`loadPackageJson get key: get key 1`] = `

import { loadPackageJson } from '../../macro.js';
      const name = loadPackageJson('name');
      const notReal = loadPackageJson('not real');

      ↓ ↓ ↓ ↓ ↓ ↓

const name = ['awesome'][0];
const notReal = [null][0];


`;

exports[`loadPackageJson run correctly: run correctly 1`] = `

import { loadPackageJson } from '../../macro.js';
      const packageJson = loadPackageJson();

      ↓ ↓ ↓ ↓ ↓ ↓

const packageJson = [
  {
    name: 'awesome',
    version: '11.14.2-rc.123+a.2.56',
  },
][0];


`;

exports[`loadTsConfigJson get different name: get different name 1`] = `

import { loadTsConfigJson } from '../../macro.js';
      const name = loadTsConfigJson('tsconfig.awesome.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const name = [
  {
    compilerOptions: {
      paths: {},
      allowJs: true,
    },
    extends: './tsconfig.json',
  },
][0];


`;

exports[`loadTsConfigJson run correctly: run correctly 1`] = `

import { loadTsConfigJson } from '../../macro.js';
      const packageJson = loadTsConfigJson();

      ↓ ↓ ↓ ↓ ↓ ↓

const packageJson = [
  {
    compilerOptions: {
      paths: {},
    },
  },
][0];


`;

exports[`writeJson run correctly: run correctly 1`] = `

import { writeJson } from '../macro.js';
      const a = writeJson({ "a": "B", "c": "D" }, './__fixtures__/.ignored/run-correctly.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const a = [
  {
    a: 'B',
    c: 'D',
  },
][0];


`;

exports[`writeJson runs with deep nesting: runs with deep nesting 1`] = `

import { writeJson } from '../macro.js';
      const a = writeJson({ "a": "B", "c": "D" }, './__fixtures__/.ignored/this/is/deeply/nested/deep-nesting.json');

      ↓ ↓ ↓ ↓ ↓ ↓

const a = [
  {
    a: 'B',
    c: 'D',
  },
][0];


`;
